# pidgin-indicator

./: .gitignore  Makefile.am  NEWS  README  README.md  configure.ac
debian/: changelog  control  copyright  rules
icons/: Makefile.am
po/: POTFILES.in  de.po  es.po  hu.po  ru.po  zh_CN.po
src/: Makefile.am  docklet.h  gtkconv.c  gtkdocklet.c  pidgin-indicator.c
